codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__experimental_features_popup_configured_key_chords.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
assertion_line: 2918
expression: popup
---
────────────────────────────────────────────────────────────────────────────────

  Experimental features
  Toggle experimental features. Changes are saved to config.toml.

› [x] Shell tool  Allow the model to run shell commands.

  Press space to select or ctrl + x enter to save for next conversation
