codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__feedback_good_result_consent_popup.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
expression: popup
---
────────────────────────────────────────────────────────────────────────────────

  Upload logs?

  The following files will be sent:
    • codex-logs.log
    • codex-doctor-report.json
    • codex-apps-tools-cache.json (if available)
    • codex-app-directory-cache.json (if available)
    • auto-review-rollout-thread-1.jsonl
    • codex-connectivity-diagnostics.txt

› 1. Yes  Share the current Codex session logs and diagnostics with the team
          for troubleshooting.
  2. No

  Press enter to confirm or esc to go back
