codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__feedback_upload_disabled_popup.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
expression: popup
---
────────────────────────────────────────────────────────────────────────────────

  Feedback uploads are disabled
  No logs are uploaded. Report at github.com/maherr/quiet-for-codex/issues

› 1. Close

  Press enter to confirm or esc to go back
